Fix: Messages should have higher z-index

--- a/assets/scss/_mixins.scss
+++ b/assets/scss/_mixins.scss
@@ -40,7 +40,7 @@
 
     // Jaunty angle to help distinguish from standard page design:
     transform: rotate(-4deg);
-    //z-index: 1;
+    z-index: 99999;
   }
 }
 
